--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,27 @@
-/* Your styles go here */
-@import "bootstrap/scss/bootstrap.scss";
-@import "bootstrap-icons/font/bootstrap-icons.css";
+@import "variables";
+@import "reset";
+@import "base";
+@import "header";
+@import "hero";
+@import "events";
+@import "reviews";
+@import "attractions";
+@import "footer";
+
+@font-face {
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+  font-weight: bold;
+  font-style: bold;
+}
+
+.custom-font-text {
+  font-family: "Neuland-Inline", sans-serif;
+  font-size: 0.5rem;
+}
+
+.adobefont {
+  font-family: "adobe-garamond-pro", serif;
+  font-variation-settings: "wght" 800;
+  font-style: bold;
+}
