--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -68,7 +68,6 @@ body {
 }
 
 .hero-section {
-  background-image: url("../images/Banner1.jpg");
   background-size: 90% auto;
   background-position: center -30px;
   background-repeat: no-repeat;
@@ -79,7 +78,25 @@ body {
   margin-left: -48px;
   margin-bottom: -350px;
 }
-.hero-section .hero-content {
+.hero-section.index-page {
+  background-image: url("../images/Banner1.jpg");
+}
+.hero-section.store-page {
+  background-image: url("../images/shopbg.jpg");
+}
+.hero-section.gallery-page {
+  background-image: url("../images/groupbg.jpg");
+}
+.hero-section.contact-page {
+  background-image: url("../images/desk.jpg");
+}
+.hero-section.map-page {
+  background-image: url("../images/island.jpg");
+}
+.hero-section.purpose-page {
+  background-image: url("../images/lab.jpg");
+}
+.hero-section .hero-content.index-page {
   background-color: #25150e;
   padding: 0.4rem 4rem;
   display: inline-block;
@@ -87,7 +104,19 @@ body {
   margin: 0 auto;
   text-shadow: 2px 2px 0px #ff0008;
 }
-.hero-section .hero-content h1 {
+.hero-section .hero-content.index-page h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+.hero-section .hero-content.store-page {
+  background-color: black;
+  padding: 0.4rem 4rem;
+  display: inline-block;
+  border-radius: 30px;
+  margin: 0 auto;
+  text-shadow: 2px 2px 0px #ff0008;
+}
+.hero-section .hero-content.store-page h1 {
   font-size: 3rem;
   font-weight: bold;
 }
@@ -434,6 +463,131 @@ body {
 .footer .footer-ingen img {
   width: 150px;
   height: auto;
+}
+
+.inventory-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.inventory-section h2 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  color: white;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.inventory-section .inventory-grid {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+.inventory-section .inventory-item {
+  flex: 0 1 calc(25% - 2rem);
+  max-width: 300px;
+  position: relative;
+  padding: 0;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+.inventory-section .inventory-item img {
+  max-width: 100%;
+  height: auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.inventory-section .inventory-item p {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: bold;
+  font-size: large;
+  color: #333;
+  padding-top: 10px;
+}
+.inventory-section .inventory-item .price {
+  font-family: "adobe-garamond-pro", serif;
+  font-size: 2.5rem;
+  color: black;
+  margin-top: -35px;
+  margin-bottom: 0px;
+}
+
+.contact-form-section {
+  padding: 3rem 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-form-container {
+  background-color: #f8f8f8;
+  padding: 2rem;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  max-width: 700px;
+  width: 100%;
+}
+.contact-form-container form {
+  display: flex;
+  flex-direction: column;
+}
+.contact-form-container form label {
+  margin-bottom: 0.5rem;
+  font-size: larger;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+}
+.contact-form-container form input,
+.contact-form-container form textarea {
+  padding: 0.5rem;
+  margin-bottom: 1.5rem;
+  border: 2px solid #333;
+  border-radius: 8px;
+  outline: none;
+}
+.contact-form-container form input:focus,
+.contact-form-container form textarea:focus {
+  border-color: #ff0008;
+  box-shadow: 0 0 8px rgba(255, 0, 8, 0.3);
+}
+.contact-form-container form .submit-btn {
+  padding: 0.5rem 2rem;
+  background-color: #000;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  align-self: center;
+}
+.contact-form-container form .submit-btn:hover {
+  background-color: #333;
+}
+
+.purpose-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.purpose-section p {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  color: #333;
+  margin: 2rem auto;
+  max-width: 800px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+.purpose-section p:first-of-type {
+  font-weight: bold;
+}
+.purpose-section p:hover {
+  color: #391f14;
+  transition: color 0.3s ease;
+}
+.purpose-section p::first-letter {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: black;
+  float: left;
+  margin-top: -1.1rem;
 }
 
 @font-face {
