--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -7,6 +7,9 @@
 @import "reviews";
 @import "attractions";
 @import "footer";
+@import "inventory";
+@import "contact";
+@import "purpose";
 
 @font-face {
   font-family: "Neuland-Inline";
