--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-/* Variables for Color Scheme */
-/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -25,7 +22,6 @@ body {
   padding-top: 2rem;
 }
 
-/* Navigation Bar */
 .header {
   background-image: url("../images/Footer.jpg");
   background-size: cover;
@@ -50,12 +46,15 @@ body {
   gap: 1.5rem;
   flex: 1;
   justify-content: center;
+  padding-right: 2.5rem;
 }
 .header .nav-bar .nav-links li a {
   color: white;
   text-decoration: none;
-  font-weight: bold;
-  font-family: "Jurassic", sans-serif;
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 500;
+  font-size: 20px;
+  font-style: normal;
 }
 .header .nav-bar .nav-links li a:hover {
   text-decoration: underline;
@@ -68,9 +67,7 @@ body {
   transform: translateX(-50%);
 }
 
-/* Hero Section */
 .hero-section {
-  background-image: url("../images/Banner1.jpg");
   background-size: 90% auto;
   background-position: center -30px;
   background-repeat: no-repeat;
@@ -81,14 +78,45 @@ body {
   margin-left: -48px;
   margin-bottom: -350px;
 }
-.hero-section .hero-content {
+.hero-section.index-page {
+  background-image: url("../images/Banner1.jpg");
+}
+.hero-section.store-page {
+  background-image: url("../images/shopbg.jpg");
+}
+.hero-section.gallery-page {
+  background-image: url("../images/groupbg.jpg");
+}
+.hero-section.contact-page {
+  background-image: url("../images/desk.jpg");
+}
+.hero-section.map-page {
+  background-image: url("../images/island.jpg");
+}
+.hero-section.purpose-page {
+  background-image: url("../images/lab.jpg");
+}
+.hero-section .hero-content.index-page {
   background-color: #25150e;
   padding: 0.4rem 4rem;
   display: inline-block;
-  border-radius: 40px;
+  border-radius: 30px;
   margin: 0 auto;
+  text-shadow: 2px 2px 0px #ff0008;
 }
-.hero-section .hero-content h1 {
+.hero-section .hero-content.index-page h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+.hero-section .hero-content.store-page {
+  background-color: black;
+  padding: 0.4rem 4rem;
+  display: inline-block;
+  border-radius: 30px;
+  margin: 0 auto;
+  text-shadow: 2px 2px 0px #ff0008;
+}
+.hero-section .hero-content.store-page h1 {
   font-size: 3rem;
   font-weight: bold;
 }
@@ -100,7 +128,20 @@ body {
 .events-section h2 {
   margin-bottom: 2rem;
   font-size: 2.5rem;
-  color: black;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.events-section h2::before, .events-section h2::after {
+  content: "";
+  flex: 1;
+  height: 8px;
+  background-color: white;
+  margin: 0 1.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 .events-section .event-cards {
   display: flex;
@@ -108,75 +149,200 @@ body {
   gap: 2rem;
 }
 .events-section .event-cards .event-card {
-  background-color: #000;
+  background-color: #ffb400;
   border: 5px solid #ffb400;
-  border-radius: 15px;
-  padding: 1rem;
-  width: 150px;
+  border-radius: 30px;
+  padding: 0.5rem;
+  width: 200px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 .events-section .event-cards .event-card .date {
-  font-size: 20rem;
+  font-size: 7rem;
   font-weight: bold;
   color: #fff;
-  text-shadow: 3px 3px 0px #ffb400;
+  text-shadow: 2px 2px 0px #ff0008;
+  background-color: black;
+  border-radius: 20px;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
 }
 .events-section .event-cards .event-card .month {
-  margin-top: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
+  color: white;
+  background-color: #ffb400;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
   font-weight: bold;
-  color: #ffb400;
+  text-shadow: 2px 2px 0px black;
 }
 
-/* Recent Reviews Section */
-.reviews-section {
-  padding: 3rem 2rem;
+.review-card {
   background-color: white;
+  border-radius: 30px;
+  margin: 0 30px 2rem;
+  padding: 1rem;
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
-.reviews-section h2 {
-  margin-bottom: 1.5rem;
-  font-size: 2.5rem;
-  color: #333;
+.review-card img {
+  width: 100px;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 0.5rem;
 }
-.reviews-section blockquote {
+.review-card .stars {
+  color: #ffd700;
+  font-size: 1.5rem;
+}
+.review-card blockquote {
   font-style: italic;
-  border-left: 5px solid #4caf50;
-  padding-left: 1rem;
-  margin: 1.5rem 0;
+  margin: 1rem 0;
+}
+.review-card footer {
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.carousel-item {
+  margin-bottom: 2rem;
+}
+
+.events-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.events-section h2 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.events-section h2::before, .events-section h2::after {
+  content: "";
+  flex: 1;
+  height: 8px;
+  background-color: white;
+  margin: 0 1.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.events-section .event-cards {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.events-section .event-cards .event-card {
+  background-color: #ffb400;
+  border: 5px solid #ffb400;
+  border-radius: 30px;
+  padding: 0.5rem;
+  width: 200px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.events-section .event-cards .event-card .date {
+  font-size: 7rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 3px 3px 0px #ff0008;
+  background-color: black;
+  border-radius: 20px;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+}
+.events-section .event-cards .event-card .month {
+  font-size: 2.5rem;
+  color: white;
+  background-color: #ffb400;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+  font-weight: bold;
+}
+
+.footer {
+  background-image: url("../images/footer.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 6rem 2rem;
+  text-align: center;
   position: relative;
 }
-.reviews-section blockquote::before {
-  content: "“";
-  font-size: 3rem;
-  color: #ffb400;
+.footer .footer-logo {
   position: absolute;
-  left: -1.5rem;
-  top: -0.5rem;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.reviews-section footer {
-  text-align: right;
+.footer .footer-logo img {
+  width: 120px;
+  height: auto;
+}
+.footer .footer-icons {
+  position: absolute;
+  bottom: 80px;
+  left: 70px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.5rem;
+}
+.footer .footer-icons a img {
+  width: 40px;
+  height: auto;
+  transition: transform 0.2s;
+}
+.footer .footer-icons a img:hover {
+  transform: scale(1.2);
+}
+.footer .footer-credits {
+  margin-top: 4rem;
+  font-size: 1.2rem;
+  color: white;
   font-weight: bold;
+  font-family: "adobe-garamond-pro", serif;
+}
+.footer .footer-ingen {
+  position: absolute;
+  bottom: 80px;
+  right: 70px;
+}
+.footer .footer-ingen img {
+  width: 150px;
+  height: auto;
 }
 
-/* Popular Attractions Section */
 .attractions-section {
   padding: 3rem 2rem;
   text-align: center;
 }
 .attractions-section h2 {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
   font-size: 2.5rem;
-  color: #333;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.attractions-section h2::before, .attractions-section h2::after {
+  content: "";
+  flex: 1;
+  height: 8px;
+  background-color: white;
+  margin: 0 1.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 .attractions-section .attraction-container {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
   flex-wrap: wrap;
 }
 .attractions-section .attraction {
-  flex: 0 1 calc(20% - 1rem);
-  max-width: 150px;
+  flex: 0 1 calc(30% - 0.25rem);
+  max-width: 400px;
   background-color: #f2f2f2;
   padding: 1rem;
   border-radius: 8px;
@@ -194,21 +360,251 @@ body {
   color: #333;
 }
 
-/* Footer Section */
+.events-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.events-section h2 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.events-section h2::before, .events-section h2::after {
+  content: "";
+  flex: 1;
+  height: 8px;
+  background-color: white;
+  margin: 0 1.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.events-section .event-cards {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.events-section .event-cards .event-card {
+  background-color: #ffb400;
+  border: 5px solid #ffb400;
+  border-radius: 30px;
+  padding: 0.5rem;
+  width: 200px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.events-section .event-cards .event-card .date {
+  font-size: 7rem;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 3px 3px 0px #ff0008;
+  background-color: black;
+  border-radius: 20px;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+}
+.events-section .event-cards .event-card .month {
+  font-size: 2.5rem;
+  color: white;
+  background-color: #ffb400;
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+  font-weight: bold;
+}
+
 .footer {
-  background-image: url("../images/Footer.jpg");
+  background-image: url("../images/footer.jpg");
   background-size: cover;
   background-position: center;
-  color: white;
+  padding: 6rem 2rem;
   text-align: center;
+  position: relative;
+}
+.footer .footer-logo {
+  position: absolute;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.footer .footer-logo img {
+  width: 120px;
+  height: auto;
+}
+.footer .footer-icons {
+  position: absolute;
+  bottom: 80px;
+  left: 70px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0.5rem;
+}
+.footer .footer-icons a img {
+  width: 40px;
+  height: auto;
+  transition: transform 0.2s;
+}
+.footer .footer-icons a img:hover {
+  transform: scale(1.2);
+}
+.footer .footer-credits {
+  margin-top: 4rem;
+  font-size: 1.2rem;
+  color: white;
+  font-weight: bold;
+  font-family: "adobe-garamond-pro", serif;
+}
+.footer .footer-ingen {
+  position: absolute;
+  bottom: 80px;
+  right: 70px;
+}
+.footer .footer-ingen img {
+  width: 150px;
+  height: auto;
+}
+
+.inventory-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.inventory-section h2 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+  color: white;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+.inventory-section .inventory-grid {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+.inventory-section .inventory-item {
+  flex: 0 1 calc(25% - 2rem);
+  max-width: 300px;
+  position: relative;
+  padding: 0;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+.inventory-section .inventory-item img {
+  max-width: 100%;
+  height: auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.inventory-section .inventory-item p {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: bold;
+  font-size: large;
+  color: #333;
+  padding-top: 10px;
+}
+.inventory-section .inventory-item .price {
+  font-family: "adobe-garamond-pro", serif;
+  font-size: 2.5rem;
+  color: black;
+  margin-top: -35px;
+  margin-bottom: 0px;
+}
+
+.contact-form-section {
+  padding: 3rem 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-form-container {
+  background-color: #f8f8f8;
   padding: 2rem;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  max-width: 700px;
+  width: 100%;
 }
-.footer .back-to-top {
-  color: #4caf50;
-  text-decoration: none;
+.contact-form-container form {
+  display: flex;
+  flex-direction: column;
 }
-.footer .back-to-top:hover {
-  text-decoration: underline;
+.contact-form-container form label {
+  margin-bottom: 0.5rem;
+  font-size: larger;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+}
+.contact-form-container form input,
+.contact-form-container form textarea {
+  padding: 0.5rem;
+  margin-bottom: 1.5rem;
+  border: 2px solid #333;
+  border-radius: 8px;
+  outline: none;
+}
+.contact-form-container form input:focus,
+.contact-form-container form textarea:focus {
+  border-color: #ff0008;
+  box-shadow: 0 0 8px rgba(255, 0, 8, 0.3);
+}
+.contact-form-container form .submit-btn {
+  padding: 0.5rem 2rem;
+  background-color: #000;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  align-self: center;
+}
+.contact-form-container form .submit-btn:hover {
+  background-color: #333;
+}
+
+.purpose-section {
+  padding: 3rem 2rem;
+  text-align: center;
+}
+.purpose-section p {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  color: #333;
+  margin: 2rem auto;
+  max-width: 800px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+.purpose-section p:first-of-type {
+  font-weight: bold;
+}
+.purpose-section p:hover {
+  color: #391f14;
+  transition: color 0.3s ease;
+}
+.purpose-section p::first-letter {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: black;
+  float: left;
+  margin-top: -1.1rem;
+}
+
+@font-face {
+  font-family: "Neuland-Inline";
+  src: url("../assets/Neuland-Inline.otf") format("opentype");
+  font-weight: bold;
+  font-style: bold;
+}
+.custom-font-text {
+  font-family: "Neuland-Inline", sans-serif;
+  font-size: 0.5rem;
+}
+
+.adobefont {
+  font-family: "adobe-garamond-pro", serif;
+  font-variation-settings: "wght" 800;
+  font-style: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
