--- a/src/stylesheets/_purpose.scss
+++ b/src/stylesheets/_purpose.scss
@@ -4,7 +4,7 @@
 
   p {
     font-size: 1.5rem;
-    line-height: 1.6;
+    line-height: 1.6; /* Ensures consistent spacing */
     color: #333;
     margin: 2rem auto;
     max-width: 800px;
@@ -20,11 +20,13 @@
     }
 
     &::first-letter {
-      font-size: 2.5rem;
+      font-size: 2.5rem; /* Large enough for emphasis */
       font-weight: bold;
       color: black;
-      float: left;
-      margin-top: -1.1rem;
+      display: inline-block; /* Keeps the letter inline */
+      vertical-align: baseline; /* Aligns the letter with the text baseline */
+      line-height: 0.5; /* Matches the line-height of the rest of the paragraph */
+      margin-right: 0.2rem; /* Add slight spacing after the letter */
     }
   }
 }
