--- a/src/stylesheets/_footer.scss
+++ b/src/stylesheets/_footer.scss
@@ -1,64 +1,3 @@
-.events-section {
-  padding: 3rem 2rem;
-  text-align: center;
-
-  h2 {
-    margin-bottom: 2rem;
-    font-size: 2.5rem;
-    color: white;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-
-    &::before,
-    &::after {
-      content: "";
-      flex: 1;
-      height: 8px;
-      background-color: white;
-      margin: 0 1.5rem;
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    }
-  }
-
-  .event-cards {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-
-    .event-card {
-      background-color: $accent-color;
-      border: 5px solid $accent-color;
-      border-radius: 30px;
-      padding: 0.5rem;
-      width: 200px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-
-      .date {
-        font-size: 7rem;
-        font-weight: bold;
-        color: #fff;
-        text-shadow: 3px 3px 0px #ff0008;
-        background-color: black;
-        border-radius: 20px;
-        font-family: "Neuland-Inline";
-        src: url("../assets/Neuland-Inline.otf") format("opentype");
-      }
-
-      .month {
-        font-size: 2.5rem;
-        color: white;
-        background-color: $accent-color;
-        font-family: "Neuland-Inline";
-        src: url("../assets/Neuland-Inline.otf") format("opentype");
-        font-weight: bold;
-      }
-    }
-  }
-}
-
 .footer {
   background-image: url("../images/footer.jpg");
   background-size: cover;
@@ -69,19 +8,19 @@
 
   .footer-logo {
     position: absolute;
-    top: 30px;
+    bottom: 80px; /* Aligns closer to social media icons */
     left: 50%;
     transform: translateX(-50%);
 
     img {
-      width: 120px;
+      width: 100px;
       height: auto;
     }
   }
 
   .footer-icons {
     position: absolute;
-    bottom: 80px;
+    bottom: 30px; /* Keeps the icons near the bottom */
     left: 70px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -99,7 +38,10 @@
   }
 
   .footer-credits {
-    margin-top: 4rem;
+    position: absolute;
+    bottom: 5px; /* Aligns closer to the logo */
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 1.2rem;
     color: white;
     font-weight: bold;
@@ -108,7 +50,7 @@
 
   .footer-ingen {
     position: absolute;
-    bottom: 80px;
+    bottom: 30px; /* Matches the social media icons */
     right: 70px;
 
     img {
