--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,6 +10,8 @@
 @import "inventory";
 @import "contact";
 @import "purpose";
+@import "map";
+@import "gallery";
 
 @font-face {
   font-family: "Neuland-Inline";
@@ -27,4 +29,57 @@
   font-family: "adobe-garamond-pro", serif;
   font-variation-settings: "wght" 800;
   font-style: bold;
+}
+
+.get-tickets {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem auto; /* Add spacing */
+  text-align: center;
+
+  .tickets-button {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    margin-top: 10px;
+    margin-bottom: -60px;
+    overflow: hidden;
+    text-transform: uppercase;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+    /* Background Image */
+    .button-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+      filter: brightness(0.7); /* Darkens the image for contrast */
+      transition: filter 0.3s ease;
+    }
+
+    /* Button Text */
+    span {
+      position: relative;
+      z-index: 1;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+
+      .button-image {
+        filter: brightness(1); /* Brightens image on hover */
+      }
+    }
+  }
 }
