--- a/src/stylesheets/_footer.scss
+++ b/src/stylesheets/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-image: url("../images/footer.jpg");
+  background-image: url("images/footer.jpg");
   background-size: cover;
   background-position: center;
   padding: 6rem 2rem;
