--- a/src/stylesheets/_hero.scss
+++ b/src/stylesheets/_hero.scss
@@ -10,27 +10,27 @@
   margin-bottom: -350px;
 
   &.index-page {
-    background-image: url("../images/Banner1.jpg");
+    background-image: url("images/Banner1.jpg");
   }
 
   &.store-page {
-    background-image: url("../images/shopbg.jpg");
+    background-image: url("images/shopbg.jpg");
   }
 
   &.gallery-page {
-    background-image: url("../images/groupbg.jpg");
+    background-image: url("images/groupbg.jpg");
   }
 
   &.contact-page {
-    background-image: url("../images/desk.jpg");
+    background-image: url("images/desk.jpg");
   }
 
   &.map-page {
-    background-image: url("../images/island.jpg");
+    background-image: url("images/island.jpg");
   }
 
   &.purpose-page {
-    background-image: url("../images/lab.jpg");
+    background-image: url("images/lab.jpg");
   }
 
   .hero-content {
