--- a/src/stylesheets/_gallery.scss
+++ b/src/stylesheets/_gallery.scss
@@ -1,32 +1,32 @@
 .gallery-page {
-  background: linear-gradient(to bottom, #ffffff, #dfe6e9); /* Gradient background */
-  padding: 0; /* Remove extra padding from the gallery-page container */
-  min-height: 100vh; /* Ensures the section fills the full viewport height */
+  background: linear-gradient(to bottom, #ffffff, #dfe6e9);
+  padding: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Center the gallery vertically */
+  justify-content: center;
   align-items: center;
   text-align: center;
 
   h1 {
     font-size: 2rem;
-    margin-bottom: 1.5rem; /* Adjust margin for spacing above the gallery */
+    margin-bottom: 1.5rem;
     color: #333;
   }
 
   .gallery-grid {
     display: grid;
-    grid-template-columns: 1fr; /* Single column by default */
-    gap: 1.5rem; /* Spacing between images */
-    width: 100%; /* Ensures the grid spans full width */
-    padding: 0 2rem; /* Add horizontal padding to the grid */
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+    width: 100%;
+    padding: 0 2rem;
 
     @media (min-width: 576px) {
-      grid-template-columns: repeat(2, 1fr); /* Two columns on small screens */
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @media (min-width: 992px) {
-      grid-template-columns: repeat(3, 1fr); /* Three columns on larger screens */
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 
