--- a/src/stylesheets/_base.scss
+++ b/src/stylesheets/_base.scss
@@ -1,7 +1,7 @@
 body {
   font-family: "Arial", sans-serif;
   background-color: black;
-  background-image: url("images/leafbg.jpg"), url("images/leafbg.jpg");
+  background-image: url("../images/leafbg.jpg"), url("../images/leafbg.jpg");
   background-repeat: repeat-y, repeat-y;
   background-position: left top, right top;
   background-size: 500px auto;
