--- a/src/stylesheets/_header.scss
+++ b/src/stylesheets/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url("images/Footer.jpg");
+  background-image: url("../images/Footer.jpg");
   background-size: cover;
   background-position: center;
   padding: 5rem 2rem 2rem;
