--- a/src/stylesheets/_hero.scss
+++ b/src/stylesheets/_hero.scss
@@ -10,11 +10,11 @@
   margin-bottom: -350px;
 
   &.index-page {
-    background-image: url("images/Banner1.jpg");
+    background-image: url("../images/Banner1.jpg");
   }
 
   &.store-page {
-    background-image: url("images/shopbg.jpg");
+    background-image: url("../images/shopbg.jpg");
   }
 
   &.gallery-page {
@@ -30,7 +30,7 @@
   }
 
   &.purpose-page {
-    background-image: url("images/lab.jpg");
+    background-image: url("../images/lab.jpg");
   }
 
   .hero-content {
