--- a/src/stylesheets/_contact.scss
+++ b/src/stylesheets/_contact.scss
@@ -16,21 +16,19 @@
     display: flex;
     flex-direction: column;
 
-    label {
-      margin-bottom: 0.5rem;
-      font-size: larger;
-      font-weight: bold;
-      color: #333;
-      text-align: center;
-    }
-
     input,
     textarea {
-      padding: 0.5rem;
+      padding: 1rem;
       margin-bottom: 1.5rem;
       border: 2px solid #333;
       border-radius: 8px;
       outline: none;
+      font-size: 1rem;
+
+      &::placeholder {
+        color: #aaa;
+        font-size: 1rem;
+      }
 
       &:focus {
         border-color: #ff0008;
@@ -39,7 +37,7 @@
     }
 
     .submit-btn {
-      padding: 0.5rem 2rem;
+      padding: 0.8rem 5rem;
       background-color: #000;
       color: white;
       font-weight: bold;
